--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "start": "node ./index.js",
-    "test": "brunch test",
+    "test": "./node_modules/.bin/karma start",
     "predeploy": "echo Starting deployment--hold onto your butts.; echo Skipping brunch build --production",
     "postdeploy": "echo Deployed. Unclench."
   },
@@ -72,13 +72,23 @@
     "clean-css-brunch": "> 1.0 < 1.8",
     "auto-reload-brunch": "> 1.0 < 1.8",
     "brunch": "~1.7.4",
-    "karma": "~0.8.0",
     "jasmine-node": "",
     "nodemon": "0.7.5",
     "marked": "0.2.x",
     "telepath-brunch": "https://github.com/nwinter/telepath-brunch/tarball/master",
     "bower": "~1.2.8",
-    "bless-brunch": "~1.6.1"
+    "bless-brunch": "~1.6.1",
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.1.2",
+    "karma-jasmine": "~0.1.5",
+    "requirejs": "~2.1.10",
+    "karma-requirejs": "~0.2.1",
+    "karma-phantomjs-launcher": "~0.1.1",
+    "karma": "~0.10.9",
+    "karma-coverage": "~0.1.4"
   },
   "license": "Copyright © 2014 CodeCombat",
   "private": true,
