--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,7 @@ FLOOBITS_README.md
 
 # mongodb
 db/
+bin/node/
+bin/mongo/
 
 ### If you add something here, copy it to the end of .npmignore, too. ###
