--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ nguage: node_js
 node_js:
   - 0.10
 before_script:
+  - "npm install"
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - "./node_modules/.bin/bower install"
