--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "express-useragent": "~0.0.9",
     "gridfs-stream": "0.4.x",
     "stream-buffers": "0.2.x",
-    "sendwithus": "2.0.x"
+    "sendwithus": "2.0.x",
+    "aws-sdk":"~2.0.0"
   },
   "devDependencies": {
     "jade": "0.33.x",
