--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "gridfs-stream": "0.4.x",
     "stream-buffers": "0.2.x",
     "sendwithus": "2.0.x",
-    "aws-sdk":"~2.0.0"
+    "aws-sdk":"~2.0.0",
+    "mubsub": "~0.2.1"
   },
   "devDependencies": {
     "jade": "0.33.x",
