Implemented task logging and new score calculations

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "stream-buffers": "0.2.x",
     "sendwithus": "2.0.x",
     "aws-sdk":"~2.0.0",
-    "mubsub": "~0.2.1"
+    "bayesian-battle":"0.0.x"
   },
   "devDependencies": {
     "jade": "0.33.x",
