--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "stream-buffers": "0.2.x",
     "sendwithus": "2.0.x",
     "aws-sdk":"~2.0.0",
-    "bayesian-battle":"0.0.x"
+    "bayesian-battle":"0.0.x",
+    "hiredis":"",
+    "redis": ""
   },
   "devDependencies": {
     "jade": "0.33.x",
