Fixes for dirt path, fast portraits, and slow transpilation. Starting to move Aether stuff into a Tome worker with Catiline.

--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "moment": "~2.5.0",
     "aether": "~0.1.2",
     "underscore.string": "~2.3.3",
-    "firebase": "~1.0.2"
+    "firebase": "~1.0.2",
+    "catiline": "~2.9.3"
   },
   "overrides": {
     "backbone": {
