Fixes for not storing default code in other sessions. sass-brunch 1.8. Removed tutorial link for now. Round wizards.

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "javascript-brunch": "> 1.0 < 1.8",
     "coffee-script-brunch": "https://github.com/brunch/coffee-script-brunch/tarball/master",
     "coffeelint-brunch": "> 1.0 < 1.8",
-    "sass-brunch": "1.7.0",
+    "sass-brunch": "~1.8.0",
     "css-brunch": "> 1.0 < 1.8",
     "jade-brunch": "> 1.0 < 1.8",
     "uglify-js-brunch": "~1.7.4",
