Moved nanoscroller to bower components and related fixes.

--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "underscore.string": "~2.3.3",
     "firebase": "~1.0.2",
     "catiline": "~2.9.3",
-    "d3": "~3.4.4"
+    "d3": "~3.4.4",
+    "nanoscroller": "~0.8.0"
   },
   "overrides": {
     "backbone": {
