--- a/package.json
+++ b/package.json
@@ -60,9 +60,10 @@
     "gridfs-stream": "0.4.x",
     "stream-buffers": "0.2.x",
     "sendwithus": "2.0.x",
-    "aws-sdk":"~2.0.0",
-    "bayesian-battle":"0.0.x",
-    "redis": ""
+    "aws-sdk": "~2.0.0",
+    "bayesian-battle": "0.0.x",
+    "redis": "",
+    "webworker-threads": "~0.4.11"
   },
   "devDependencies": {
     "jade": "0.33.x",
