Added a delta subview for displaying deltas of schema'd data.

--- a/bower.json
+++ b/bower.json
@@ -52,6 +52,9 @@
     },
     "underscore.string": {
       "main": "lib/underscore.string.js"
+    },
+    "jsondiffpatch": {
+      "main": ["build/bundle-full.js", "build/formatters.js", "src/formatters/html.css"]
     }
   }
 }
