+ Added login data to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,7 @@ bin/mongo/
 # windows
 /SCOCODE.bat
 
+# local settings
+login.coffee
+
 ### If you add something here, copy it to the end of .npmignore, too. ###
