--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "firebase": "~1.0.2",
     "catiline": "~2.9.3",
     "d3": "~3.4.4",
-    "nanoscroller": "~0.8.0"
+    "nanoscroller": "~0.8.0",
+    "validated-backbone-mediator": "~0.1.3"
   },
   "overrides": {
     "backbone": {
