--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,80 @@
--### If you add something here, copy it to the end of .npmignore, too. ###
- -
- -# Python
- -*.pyc
- -*.pyo
- -
- -# OS X
- -.DS_Store
- -Icon?
- -._*
- -.Spotlight-V100
- -.Trashes
- -
- -# Windows
- -Thumbs.db
- -
- -# Emacs
- -*.*~
- -*.#
- -.#*
- -*#
- -
- -# Vim
- -.*.sw[a-z]
- -*.un~i
- -
- -# Sublime
- -*.sublime-project
- -*.sublime-workspace
- -
- -# NPM packages folder.
- -node_modules/
- -bower_components/
- -
- -# Some other random stuff
- -always-ignore extensions
- -*.diff
- -*.err
- -*.orig
- -*.log
- -*.rej
- -*.vi
- -*.sass-cache
- -
- -# OS or Editor folders
- -.cache
- -.project
- -.settings
- -.tmproj
- -.idea
- -nbproject
- -
- -# Brunch folder for temporary files.
- -tmp/
- -
- -# Brunch output
- -public/
- -
- -# Redis?
- -dump.rdb
- -
- -# Mongo
- -mongo/
- -
- -# Karma coverage
- -coverage/
- -
- -# Floo
- -.floo
- -FLOOBITS_README.md
- -
- -# mongodb
- -db/
- -bin/node/
- -bin/mongo/
- -
- -# windows
- -/SCOCODE.bat
- -
- -### If you add something here, copy it to the end of .npmignore, too. ###
+### If you add something here, copy it to the end of .npmignore, too. ###
+
+# Python
+*.pyc
+*.pyo
+
+# OS X
+.DS_Store
+Icon?
+._*
+.Spotlight-V100
+.Trashes
+
+# Windows
+Thumbs.db
+
+# Emacs
+*.*~
+*.#
+.#*
+*#
+
+# Vim
+.*.sw[a-z]
+*.un~i
+
+# Sublime
+*.sublime-project
+*.sublime-workspace
+
+# NPM packages folder.
+node_modules/
+bower_components/
+
+# Some other random stuff
+always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.vi
+*.sass-cache
+
+# OS or Editor folders
+.cache
+.project
+.settings
+.tmproj
+.idea
+nbproject
+
+# Brunch folder for temporary files.
+tmp/
+
+# Brunch output
+public/
+
+# Redis?
+dump.rdb
+
+# Mongo
+mongo/
+
+# Karma coverage
+coverage/
+
+# Floo
+.floo
+FLOOBITS_README.md
+
+# mongodb
+db/
+bin/node/
+bin/mongo/
+
+# windows
+/SCOCODE.bat
+
+### If you add something here, copy it to the end of .npmignore, too. ###
