--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ Thumbs.db
 *.sublime-project
 *.sublime-workspace
 
+# IntelliJ/WebStorm
+*.iml
+
 # NPM packages folder.
 node_modules/
 bower_components/
@@ -76,5 +79,11 @@ bin/mongo/
 
 # windows
 /SCOCODE.bat
+
+# local settings
+login.coffee
+
+# debugging
+*.heapsnapshot
 
 ### If you add something here, copy it to the end of .npmignore, too. ###
