Another stab at fixing TravisCI, which tried to run karma through /node_modules/.bin and failed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_script:
   - "./node_modules/.bin/brunch b"
 
 script:
-  - "./node_modules/.bin/karma start --browsers Firefox --single-run"
+  - "./node_modules/karma/bin/karma start --browsers Firefox --single-run"
 
