--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ before_script:
   - "./node_modules/.bin/bower install"
   - "gem install sass"
   - "./node_modules/.bin/brunch b"
+  - "./bin/coco-mongodb fork"
+  - "node index.js --unittest &"
 
 script:
+  - "./node_modules/jasmine-node/bin/jasmine-node test/server/ --coffee --captureExceptions"
   - "./node_modules/karma/bin/karma start --browsers Firefox --single-run"
-
