--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
   - "mkdir mongo"
   - "mongod --dbpath=./mongo --fork --logpath ./mongodb.log"
   - "node index.js --unittest &"
+  - "sleep 5" # to give node a chance to start
 
 script:
   - "./node_modules/jasmine-node/bin/jasmine-node test/server/ --coffee --captureExceptions"
