--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,7 @@
     "bootstrap": "~3.1.1",
     "validated-backbone-mediator": "~0.1.3",
     "jquery.browser": "~0.0.6",
-    "zatanna": "file:///Users/dominik/dev/zatanna/.git/"
+    "zatanna": "~0.0.1"
   },
   "overrides": {
     "backbone": {
